tests/baselines/reference/invalidNumberAssignments.errors.txt
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(3,5): error TS2322: Type 'number' is not assignable to type 'boolean'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(4,5): error TS2322: Type 'number' is not assignable to type 'string'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(5,5): error TS2322: Type 'number' is not assignable to type 'void'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(9,5): error TS2322: Type 'number' is not assignable to type 'C'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(12,5): error TS2322: Type 'number' is not assignable to type 'I'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(14,5): error TS2322: Type 'number' is not assignable to type '{ baz: string; }'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(15,5): error TS2322: Type 'number' is not assignable to type '{ 0: number; }'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(18,1): error TS2631: Cannot assign to 'M' because it is a namespace.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(21,5): error TS2322: Type 'number' is not assignable to type 'T'.
  'T' could be instantiated with an arbitrary type which could be unrelated to 'number'.
tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts(23,1): error TS2630: Cannot assign to 'i' because it is a function.


==== tests/cases/conformance/types/primitives/number/invalidNumberAssignments.ts (10 errors) ====
    var x = 1;
    
    var a: boolean = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'boolean'.
    var b: string = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
    var c: void = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'void'.
    var d: typeof undefined = x;
    
    class C { foo: string; }
    var e: C = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'C'.
    
    interface I { bar: string; }
    var f: I = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'I'.
    
    var g: { baz: string } = 1;
        ~
!!! error TS2322: Type 'number' is not assignable to type '{ baz: string; }'.
    var g2: { 0: number } = 1;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '{ 0: number; }'.
    
    module M { export var x = 1; }
    M = x;
    ~
!!! error TS2631: Cannot assign to 'M' because it is a namespace.
    
    function i<T>(a: T) {
        a = x;
        ~
!!! error TS2322: Type 'number' is not assignable to type 'T'.
!!! error TS2322:   'T' could be instantiated with an arbitrary type which could be unrelated to 'number'.
    }
    i = x;
    ~
!!! error TS2630: Cannot assign to 'i' because it is a function.